--- a/JBatchTest/src/main/webapp/WEB-INF/web.xml
+++ b/JBatchTest/src/main/webapp/WEB-INF/web.xml
@@ -1,26 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
-   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-   xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
-   version="4.0">
+<web-app version="4.0" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd">
     <session-config>
         <session-timeout>
             30
         </session-timeout>
     </session-config>
     <context-param>
-    	<param-name>SYSTEM_FILE_PATH</param-name>
-    	<param-value>/META-INF/settings.xml</param-value>
+        <param-name>SYSTEM_FILE_PATH</param-name>
+        <param-value>/META-INF/settings.xml</param-value>
     </context-param>
     <filter>
         <filter-name>servletLogFilter</filter-name>
-        <filter-class>jp.co.jeu.jbatch.ServletLogFilter</filter-class>
+        <filter-class>jp.co.jeu.jbatch.filter.ServletLogFilter</filter-class>
     </filter>
     <filter-mapping>
         <filter-name>servletLogFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
     <listener>
-    	<listener-class>jp.co.jeu.jbatch.BatchAppListener</listener-class>
+        <listener-class>jp.co.jeu.jbatch.BatchAppListener</listener-class>
     </listener>
 </web-app>
