--- a/jeus-common-lib/pom.xml
+++ b/jeus-common-lib/pom.xml
@@ -10,4 +10,11 @@
         <maven.compiler.source>14</maven.compiler.source>
         <maven.compiler.target>14</maven.compiler.target>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>org.glassfish.jersey.core</groupId>
+            <artifactId>jersey-client</artifactId>
+            <version>3.0.1</version>
+        </dependency>
+    </dependencies>
 </project>
