--- a/WebAppOnDocker/src/main/webapp/WEB-INF/web.xml
+++ b/WebAppOnDocker/src/main/webapp/WEB-INF/web.xml
@@ -1,11 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
-   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-   xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
-   version="4.0">
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
+         version="4.0">
     <session-config>
         <session-timeout>
             30
         </session-timeout>
     </session-config>
+    <context-param>
+        <param-name>SYSTEM_FILE_PATH</param-name>
+        <param-value>/META-INF/SystemSettings.xml</param-value>
+    </context-param>
+    <listener>
+        <listener-class>jp.co.jeu.webappondocker.config.SystemListener</listener-class>
+    </listener>
 </web-app>
