--- a/jeus-common-lib/pom.xml
+++ b/jeus-common-lib/pom.xml
@@ -16,6 +16,20 @@
             <artifactId>javaee-api</artifactId>
             <version>8.0.1</version>
         </dependency>
-        
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.4.0-b180830.0359</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-core</artifactId>
+            <version>2.3.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-impl</artifactId>
+            <version>2.4.0-b180830.0438</version>
+        </dependency>
     </dependencies>
 </project>
