--- a/all-jeus/pom.xml
+++ b/all-jeus/pom.xml
@@ -26,5 +26,6 @@
     <modules>
       <module>../jeus-common-lib</module>
       <module>../JBatchTest</module>
+      <module>../WebAppOnDocker</module>
     </modules>
 </project>
