--- a/WebAppOnDocker/pom.xml
+++ b/WebAppOnDocker/pom.xml
@@ -104,6 +104,11 @@
             <artifactId>jeus-common-lib</artifactId>
             <version>${jeus-version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.7</version>
+        </dependency>
     </dependencies>
     
     <build>
